Update Workign History
added Longtech RMA Supervisor

--- a/resume.html
+++ b/resume.html
@@ -964,6 +964,32 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
                   Work Experience
                 </h4>
                 <ul class="list-unstyled">
+
+                  <li class="card card-nested clearfix">
+                    <div class="content">
+                      <p class="clear-margin relative">
+                        <strong>RMA Supervisor</strong>,&nbsp;
+                        <a href="http://www.longtech.ca/" target="_blank">Longtech Computer Distribution.</a>
+                      </p>
+                      <p class="text-muted">
+                        <small>
+                          <span>
+                            <i class="fa fa-clock-o icon-left"></i>
+                          </span>
+                          <span class="space-right">
+                            September, 2019 -
+                            Present
+                          </span>
+                        </small>
+                      </p>
+                      <ul style="list-style-type: square">
+                        <li>Responsible for all daily tasks of receiving, testing and return
+                        <li>Product quality control for purchasers and customer.
+                        <li>Product’s Research, Technical Support, Product Training,
+                          <br>Support Sales, and Customer Service
+                    </div>
+                  </li>
+
                   <li class="card card-nested clearfix">
                     <div class="content">
                       <p class="clear-margin relative">
@@ -1012,6 +1038,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
                           <br>and implemented security measures to protect confidential data and information
                     </div>
                   </li>
+
                 </ul>
               </div>
             </div>
